# icar_detector

./: README.md  icar_detector.rar  test_run.sh  train.py
icar_detector/: CMakeLists.txt  package.xml
icar_detector/config/: detecor_config.json
icar_detector/include/icar_detector/: Marks.hpp  detector.hpp  sign_classifier.hpp
icar_detector/model/: label.txt  mlp.onnx  obstacle_label.txt  obstacle_mlp.onnx  sign_label.txt  sign_mlp.onnx
icar_detector/src/: detector.cpp  sign_classifier.cpp
icar_detector/test/: set_parameter.cpp  test_sign_cls.cpp
trainer/: train_Conv1.py  train_mlp1.py
trainer/Obstacle_models/: model_1.000percent_Conv.onnx  model_1.000percent_Conv.pth  model_1.000percent_mlp.onnx  model_1.000percent_mlp.pth
trainer/Sign_models/: model_0.960percent_Conv.onnx  model_0.960percent_Conv.pth  model_0.967percent_Conv.onnx  model_0.967percent_Conv.pth  model_0.992percent_Conv.onnx  model_0.992percent_Conv.pth  model_1.000percent_mlp.onnx  model_1.000percent_mlp.pth
